[gd_scene load_steps=4 format=3 uid="uid://wy75x8vwgq6r"]

[ext_resource type="Script" path="res://Scripts/sprite_to_collision.gd" id="1_yuhq5"]
[ext_resource type="Texture2D" uid="uid://cu2mw86y0hu0u" path="res://Assets/OC/thumbsup.png" id="2_1fg0y"]
[ext_resource type="Script" path="res://Scripts/face.gd" id="3_4qcm6"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_yuhq5")

[node name="Sprite2D" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture = ExtResource("2_1fg0y")
script = ExtResource("3_4qcm6")

[node name="Area2D" type="Area2D" parent="."]
unique_name_in_owner = true
position = Vector2(-1107.72, -1024)

[node name="bruh" type="CollisionPolygon2D" parent="Area2D"]
visible = false
position = Vector2(89.25, 0)
polygon = PackedVector2Array(897, 249, 897, 248, 989, 260, 1074, 300, 1135, 354, 1185, 443, 1196, 493, 1193, 579, 1181, 637, 1128, 722, 1195, 765, 1238, 817, 1250, 868, 1250, 923, 1239, 965, 1309, 1043, 1345, 1093, 1377, 1156, 1381, 1222, 1355, 1313, 1441, 1764, 1472, 2048, 278, 2048, 296, 1837, 273, 1801, 268, 1761, 321, 1684, 349, 1521, 407, 1308, 378, 1213, 373, 1136, 389, 1102, 452, 1034, 428, 996, 392, 907, 389, 863, 401, 819, 442, 727, 484, 663, 543, 630, 638, 597, 632, 557, 636, 473, 659, 410, 702, 345, 764, 293, 817, 268)
disabled = true

[node name="explaining2" type="CollisionPolygon2D" parent="Area2D"]
visible = false
position = Vector2(-10.165, 0)
polygon = PackedVector2Array(997, 250, 997, 249, 1054, 252, 1124, 270, 1182, 302, 1244, 363, 1283, 436, 1295, 482, 1298, 558, 1281, 637, 1228, 723, 1301, 771, 1345, 837, 1384, 844, 1448, 888, 1524, 780, 1556, 753, 1543, 694, 1568, 672, 1607, 656, 1606, 532, 1618, 423, 1628, 412, 1660, 417, 1678, 434, 1702, 478, 1698, 607, 1781, 617, 1835, 661, 1838, 704, 1819, 789, 1843, 795, 1862, 815, 1880, 851, 1903, 933, 1839, 1043, 1832, 1283, 1785, 1380, 1750, 1566, 1730, 1574, 1669, 1577, 1580, 1558, 1531, 1511, 1421, 1381, 1449, 1680, 1469, 1792, 1503, 1911, 1496, 1956, 1441, 2048, 478, 2048, 488, 2006, 462, 1928, 450, 1839, 449, 1820, 466, 1787, 455, 1644, 336, 1388, 315, 1333, 310, 1283, 332, 1238, 364, 1204, 425, 1069, 438, 962, 453, 928, 490, 878, 496, 837, 556, 705, 595, 654, 738, 598, 732, 510, 738, 467, 754, 418, 803, 342, 884, 280, 932, 261)
disabled = true

[node name="explaining3" type="CollisionPolygon2D" parent="Area2D"]
visible = false
position = Vector2(89.93, 0)
polygon = PackedVector2Array(877, 297, 877, 296, 937, 301, 995, 316, 1062, 353, 1134, 428, 1158, 472, 1176, 541, 1171, 639, 1162, 682, 1139, 728, 1212, 780, 1274, 813, 1314, 848, 1325, 886, 1322, 1012, 1357, 1086, 1403, 939, 1377, 851, 1371, 787, 1481, 715, 1522, 710, 1535, 691, 1525, 619, 1532, 548, 1539, 543, 1583, 549, 1607, 571, 1618, 628, 1655, 636, 1684, 658, 1735, 658, 1788, 642, 1851, 642, 1887, 662, 1902, 686, 1902, 704, 1878, 728, 1860, 733, 1870, 753, 1863, 796, 1840, 798, 1743, 772, 1783, 813, 1801, 843, 1801, 865, 1685, 1003, 1596, 1433, 1542, 1517, 1478, 1577, 1442, 1583, 1337, 1570, 1355, 1713, 1375, 1815, 1405, 1914, 1399, 1951, 1342, 2048, 377, 2048, 387, 2006, 363, 1936, 348, 1820, 392, 1734, 463, 1626, 469, 1611, 459, 1593, 458, 1556, 503, 1431, 466, 1219, 414, 1182, 374, 1128, 381, 1073, 421, 982, 389, 896, 392, 848, 425, 761, 477, 672, 493, 654, 612, 605, 617, 517, 643, 450, 688, 386, 750, 338, 804, 313)
disabled = true

[node name="explaining4" type="CollisionPolygon2D" parent="Area2D"]
visible = false
position = Vector2(90.77, 0)
polygon = PackedVector2Array(969, 263, 969, 262, 1056, 273, 1090, 283, 1148, 315, 1203, 364, 1250, 438, 1269, 515, 1264, 599, 1251, 657, 1222, 710, 1182, 757, 1205, 774, 1236, 814, 1248, 840, 1250, 890, 1346, 978, 1349, 1036, 1333, 1141, 1366, 1196, 1379, 1250, 1428, 1149, 1459, 1109, 1444, 1055, 1442, 1017, 1451, 992, 1489, 922, 1542, 900, 1550, 801, 1635, 769, 1650, 710, 1693, 618, 1737, 622, 1764, 648, 1796, 658, 1820, 689, 1845, 695, 1868, 716, 1876, 751, 1851, 792, 1875, 810, 1888, 848, 1877, 875, 1822, 938, 1884, 1005, 1914, 1053, 1922, 1087, 1910, 1125, 1874, 1191, 1845, 1227, 1802, 1241, 1764, 1301, 1703, 1474, 1609, 1587, 1475, 1723, 1428, 1724, 1355, 1710, 1363, 1758, 1534, 1797, 1554, 1817, 1537, 1928, 1411, 2028, 1382, 2034, 1355, 2028, 1342, 2048, 377, 2048, 387, 2011, 358, 1915, 349, 1817, 292, 1788, 189, 1715, 170, 1690, 175, 1616, 140, 1565, 139, 1542, 176, 1468, 219, 1304, 281, 1126, 288, 1101, 281, 1086, 284, 1029, 313, 953, 389, 858, 414, 786, 477, 672, 491, 656, 545, 629, 619, 602, 705, 582, 707, 493, 722, 445, 754, 383, 791, 341, 831, 310, 891, 281)
disabled = true

[node name="explaining" type="CollisionPolygon2D" parent="Area2D"]
visible = false
position = Vector2(-10.505, 0)
polygon = PackedVector2Array(997, 250, 997, 249, 1062, 253, 1129, 272, 1179, 300, 1238, 355, 1282, 433, 1297, 495, 1298, 558, 1281, 637, 1228, 723, 1313, 783, 1342, 826, 1349, 892, 1365, 882, 1385, 895, 1424, 889, 1439, 944, 1468, 1008, 1513, 1046, 1550, 1093, 1565, 1123, 1576, 1183, 1641, 1203, 1680, 1224, 1733, 1267, 1751, 1353, 1748, 1392, 1729, 1458, 1729, 1535, 1754, 1616, 1779, 1750, 1744, 1825, 1663, 1912, 1622, 1904, 1471, 1797, 1504, 1914, 1504, 1936, 1441, 2048, 478, 2048, 488, 2006, 466, 1944, 449, 1830, 408, 1849, 365, 1854, 308, 1778, 289, 1737, 274, 1665, 355, 1472, 368, 1394, 362, 1289, 390, 1212, 414, 1191, 426, 1098, 456, 1041, 521, 979, 490, 896, 490, 863, 515, 786, 586, 662, 637, 634, 738, 598, 732, 558, 736, 477, 754, 418, 792, 355, 868, 289, 916, 266)
disabled = true

[node name="facepalm" type="CollisionPolygon2D" parent="Area2D"]
visible = false
polygon = PackedVector2Array(1088, 291, 1088, 290, 1196, 304, 1255, 331, 1316, 381, 1349, 425, 1377, 489, 1394, 489, 1403, 498, 1421, 644, 1395, 717, 1416, 769, 1468, 852, 1519, 847, 1596, 914, 1646, 975, 1622, 1129, 1706, 1493, 1670, 1622, 1657, 1641, 1608, 1660, 1500, 1678, 1442, 1620, 1464, 1768, 1504, 1914, 1498, 1951, 1441, 2048, 478, 2048, 488, 2006, 462, 1928, 450, 1839, 449, 1820, 466, 1787, 455, 1644, 336, 1388, 315, 1333, 310, 1283, 332, 1238, 364, 1204, 424, 1071, 436, 968, 454, 926, 489, 879, 515, 786, 579, 671, 590, 658, 643, 631, 716, 604, 823, 580, 831, 500, 843, 464, 883, 396, 959, 330, 1007, 307)
disabled = true

[node name="pointing" type="CollisionPolygon2D" parent="Area2D"]
visible = false
position = Vector2(287.275, 0)
polygon = PackedVector2Array(710, 250, 710, 249, 775, 253, 842, 272, 912, 315, 966, 376, 1004, 463, 1011, 558, 994, 637, 941, 723, 1002, 762, 1045, 812, 1082, 800, 1120, 798, 1209, 818, 1470, 790, 1572, 763, 1640, 701, 1688, 668, 1732, 649, 1795, 665, 1820, 681, 1858, 723, 1916, 709, 1962, 741, 1971, 751, 1972, 772, 2185, 765, 2194, 774, 2194, 797, 2182, 819, 2145, 845, 2112, 854, 1999, 862, 1989, 943, 1978, 962, 1959, 972, 1956, 996, 1930, 1018, 1897, 1019, 1868, 1059, 1832, 1088, 1749, 1084, 1688, 1066, 1627, 1037, 1390, 1075, 1165, 1121, 1098, 1158, 1109, 1235, 1106, 1287, 1132, 1344, 1135, 1434, 1163, 1687, 1185, 1806, 1217, 1914, 1211, 1951, 1154, 2048, 191, 2048, 201, 2006, 175, 1928, 163, 1839, 162, 1820, 179, 1787, 168, 1644, 49, 1388, 28, 1333, 23, 1283, 45, 1238, 77, 1204, 138, 1069, 151, 962, 166, 928, 203, 878, 209, 837, 269, 705, 308, 654, 451, 598, 445, 510, 451, 467, 467, 418, 516, 342, 597, 280, 645, 261)
disabled = true

[node name="shrug" type="CollisionPolygon2D" parent="Area2D"]
visible = false
position = Vector2(47.75, 0)
polygon = PackedVector2Array(1385, 329, 1385, 328, 1445, 333, 1506, 349, 1564, 381, 1623, 434, 1661, 493, 1685, 581, 1676, 686, 1667, 723, 1641, 769, 1677, 777, 1749, 816, 1786, 851, 1816, 915, 1850, 893, 1892, 890, 1903, 858, 1908, 801, 1931, 771, 1967, 759, 1960, 688, 1975, 677, 2014, 678, 2044, 696, 2061, 777, 2083, 803, 2189, 833, 2327, 813, 2352, 832, 2369, 861, 2370, 908, 2360, 937, 2256, 953, 2164, 977, 2115, 978, 2105, 989, 2131, 1010, 2146, 1040, 2159, 1155, 2082, 1227, 2063, 1290, 1992, 1459, 1959, 1675, 1890, 1739, 1806, 1784, 1841, 1936, 1779, 2047, 813, 2048, 823, 2006, 804, 1955, 784, 1837, 784, 1820, 812, 1765, 759, 1730, 703, 1677, 695, 1659, 669, 1459, 638, 1393, 582, 1234, 503, 1157, 515, 1040, 527, 1013, 558, 992, 546, 978, 501, 978, 410, 954, 306, 940, 294, 927, 291, 863, 304, 838, 334, 813, 471, 831, 570, 807, 599, 780, 615, 699, 636, 682, 686, 677, 700, 686, 694, 759, 720, 765, 743, 784, 758, 817, 758, 858, 767, 886, 804, 890, 828, 904, 831, 837, 866, 751, 920, 663, 986, 627, 1121, 586, 1138, 511, 1155, 474, 1196, 418, 1258, 370, 1312, 345)
disabled = true

[node name="thinking" type="CollisionPolygon2D" parent="Area2D"]
visible = false
position = Vector2(176.44, 0)
polygon = PackedVector2Array(899, 247, 899, 246, 955, 251, 1019, 268, 1090, 309, 1159, 385, 1185, 439, 1197, 489, 1199, 544, 1184, 632, 1131, 723, 1196, 764, 1226, 798, 1295, 823, 1362, 877, 1402, 951, 1412, 993, 1411, 1048, 1473, 1184, 1497, 1210, 1528, 1264, 1524, 1321, 1385, 1630, 1371, 1785, 1407, 1934, 1358, 2028, 1344, 2048, 375, 2048, 386, 2007, 361, 1934, 346, 1822, 390, 1735, 461, 1626, 545, 1375, 396, 1521, 280, 1531, 158, 1513, 134, 1446, 128, 1367, 140, 1270, 152, 1246, 193, 1209, 321, 1037, 356, 955, 391, 907, 392, 842, 420, 769, 460, 694, 492, 653, 636, 596, 632, 489, 646, 438, 673, 381, 707, 337, 754, 298, 823, 264)
disabled = true

[node name="thumbsup" type="CollisionPolygon2D" parent="Area2D"]
position = Vector2(104.87, 0)
polygon = PackedVector2Array(966, 305, 966, 304, 1054, 308, 1134, 337, 1203, 389, 1235, 429, 1270, 502, 1281, 556, 1277, 652, 1248, 731, 1190, 804, 1258, 912, 1290, 1003, 1355, 1073, 1375, 1105, 1374, 1145, 1335, 1260, 1332, 1337, 1300, 1417, 1308, 1438, 1314, 1522, 1338, 1534, 1357, 1555, 1365, 1608, 1375, 1612, 1393, 1667, 1431, 1844, 1428, 1880, 1401, 1930, 1397, 1993, 1373, 2048, 619, 2048, 579, 1995, 533, 1914, 544, 1820, 593, 1649, 563, 1451, 515, 1408, 479, 1294, 422, 1265, 325, 1182, 298, 1107, 289, 999, 354, 910, 442, 838, 560, 776, 592, 765, 674, 760, 654, 641, 655, 567, 668, 551, 709, 553, 727, 481, 751, 435, 795, 381, 861, 334, 918, 312)
disabled = true

[node name="well" type="CollisionPolygon2D" parent="Area2D"]
visible = false
polygon = PackedVector2Array(997, 250, 997, 249, 1095, 260, 1142, 278, 1205, 322, 1278, 332, 1320, 351, 1364, 320, 1411, 299, 1461, 287, 1526, 286, 1604, 369, 1658, 474, 1949, 658, 1961, 701, 1971, 819, 1918, 923, 1897, 950, 1848, 986, 1777, 1029, 1684, 1072, 1486, 1121, 1434, 1123, 1387, 1173, 1397, 1242, 1393, 1287, 1420, 1349, 1420, 1408, 1451, 1694, 1466, 1778, 1504, 1914, 1498, 1951, 1441, 2048, 478, 2048, 488, 2006, 462, 1928, 450, 1839, 449, 1820, 466, 1787, 455, 1644, 336, 1388, 315, 1333, 310, 1283, 332, 1238, 364, 1204, 425, 1069, 438, 962, 453, 928, 490, 878, 496, 837, 556, 705, 595, 654, 738, 598, 732, 510, 738, 467, 754, 418, 803, 342, 884, 280, 932, 261)
disabled = true

[node name="you" type="CollisionPolygon2D" parent="Area2D"]
visible = false
polygon = PackedVector2Array(967, 304, 967, 303, 1043, 305, 1083, 314, 1146, 342, 1216, 401, 1250, 450, 1275, 512, 1284, 569, 1274, 673, 1242, 745, 1192, 804, 1259, 910, 1292, 1003, 1358, 1074, 1378, 1108, 1378, 1137, 1339, 1252, 1331, 1294, 1333, 1342, 1302, 1417, 1310, 1438, 1316, 1521, 1356, 1549, 1367, 1607, 1381, 1619, 1398, 1678, 1433, 1844, 1431, 1877, 1403, 1930, 1402, 1980, 1376, 2046, 619, 2048, 582, 2000, 533, 1914, 544, 1820, 593, 1649, 563, 1451, 515, 1408, 479, 1294, 418, 1263, 322, 1179, 301, 1121, 289, 999, 336, 930, 413, 858, 503, 801, 556, 777, 621, 762, 657, 725, 724, 697, 714, 660, 707, 570, 715, 518, 745, 444, 773, 404, 826, 355, 879, 325)
disabled = true

[node name="Container" type="Node" parent="."]

[connection signal="input_event" from="Area2D" to="Sprite2D" method="_on_area_2d_input_event"]
